src/js/components/county-detail/county-detail.less
@import "../../../css/base.less";

county-detail {
  .controls {
    text-align: right;

    label {
      .knockout();
      font-size: 0.8rem;
      margin-bottom: 8px;
      margin-right: 6px;
      display: inline-block;
    }

    .outer-county-select {
      padding: 6px 4px;
      border: 1px solid #ccc;
      border-radius: 4px;
      display: inline-block;
    }

    select#county-select {
      border: none;
      font-size: 12px;
      font-family: @gotham;
      background: transparent;
      width: 100%;
    }
  }

  .counties {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 16px;

    @media @mobile {
      display: block;
    }
  }

  results-table:not([party]) {
    padding: 20px;
    background: var(--shaded);
    text-align: center;
  }
}

